@@ -1,3 +1,8 @@
+2020-07-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, posix_compare.
+	* posix_compare.awk, posix_compare.ok: New files.
+
 2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dbugeval2.ok, dbugtypedre1.ok, dbugtypedre2.ok, symtab10.ok,
