@@ -1,3 +1,8 @@
+2020-07-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* eval.c (posix_compare): Rewrite contributed by
+	Michael Builov <mbuilov@gmail.com>.
+
 2020-06-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* debug.c: Cleanup messages. Error messages start with lower
